FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130323:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle support for pkgconf (pkg-config) dependency:

    USES= pkgconfig[:build] will add pkgconf into BUILD_DEPENDS
    USES= pkgconfig:run will add pkgconf into RUN_DEPENDS
    USES= pkgconfig:both will add pkgconf into both RUN and BUILD DEPENDS

    It deprecates USE_PKGCONFIG which will be removed as soon as it is not
    used anymore

20130320:
AUTHOR: jgh@FreeBSD.org

  * New USES macro to handle support for Zenoss ports and Zenpacks:

    USES= zenoss

20130319:
AUTHOR: makc@FreeBSD.org

 * New USES macro should be used instead of deprecated USE_CMAKE and
   CMAKE_OUTSOURCE:

   USES= cmake:outsource
   to perform out-of-source build (equivalent to former pair usage of
   USE_CMAKE/CMAKE_OUTSOURCE)

   USES= cmake
   In-source build (equivalent to plain USE_CMAKE=yes) can be used if
   project doesn't support out-of-source build.


20130319:
AUTHOR: bapt@FreeBSD.org

 * The options framework now uses ports-mgmt/dialog4ports contributed by
   Ilya A. Arkhipov. It boostraps it if not present when one calls
   make config.

   dialog4ports provides a new UI able to represent all the features
   provided by the new options framework.

20130315:
AUTHOR: bdrewery@FreeBSD.org

 * USE_QMAIL_RUN, USE_QMAIL_BUILD and WANT_QMAIL have been removed
   and converted into the qmail USE feature

   USES= qmail:run will add qmail into RUN_DEPENDS
   USES= qmail:build will add qmail into BUILD_DEPENDS
   USES= qmail[:both] will add qmail into both RUN and BUILD DEPENDS
   USES= qmail:vars will set QMAIL_PREFIX

20130315:
AUTHOR: bapt@FreeBSD.org
